--- a/index.html
+++ b/index.html
@@ -375,12 +375,13 @@
             <div class="btn-group" style="text-align:center;">
              &nbsp;&nbsp; <button class="button" style="text-align:center;" > Jayed</button>
               <button class="button" style="text-align:center;">Akash</button>
+                <button class="button" style="text-align:center;">Mahin</button>
             
             </div>
             <div id="di">
-            <div id="div1" style="color:red;">Jayed &</div>
-            <div id="div2"  style="color:red;">Akash</div>
-            <div id="div3"></div>
+            <div id="div1" style="color:red;">Jayed,</div>
+            <div id="div2"  style="color:red;">Akash &</div>
+            <div id="div3">Mahin</div>
             </div>
              &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;
             <div class="center">
