--- a/hi.html
+++ b/hi.html
@@ -7,6 +7,6 @@
   <input type="file" name="fileToUpload" id="fileToUpload">
   <input type="submit" value="Upload Image" name="submit">
 </form>
-<a href="hhh.html"><img src="home.jfif" alt="Go to home" style="width:128px;height:128px;"></a>
+<a href="index.html"><img src="home.jfif" alt="Go to home" style="width:128px;height:128px;"></a>
 </body>
 </html>
