--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
     background-color: #46FF33;
     font-weight: bold;
     position: relative;
-    animation: mymove 10s infinite;
+    animation: mymove 4.8s infinite;
   }
   
   #div1 {animation-timing-function: linear;}
   #div2 {animation-timing-function: ease;}
-  #div3 {animation-timing-function: ease-in;}
+  #div3 {animation-timing-function: ease;}
   
   @keyframes mymove {
     from {left: 0px;}
-    to {left: 1235px;}
+    to {left: 396px;}
   }
   </style>
     <style>
