--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <style>
       #a2 {
     background: linear-gradient(-40deg, #ee7552, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 30% 1000%;
+    background-size: auto;
     animation: gradient 5s ease infinite;
     height: 5vh;
   }
@@ -126,7 +126,7 @@
   
   @keyframes mymove {
     from {left: 0px;}
-    to {left: 300px;}
+    to {left: 298px;}
   }
   </style>
     <style>
